--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </form>
       <ul class="list-group">
         <li ng-repeat="user in searchCtrl.searchResult.items">
-          <img ng-src="{{user.avatar_url}}&s=50 width=50px height=50px">
+          <img ng-src="{{user.avatar_url}}&s=50" width=50 height=50>
           <a ng-href="{{user.html_url}}">{{user.login}}</a>
         </li>
       </ul>
